已设计功能全部完成

--- a/recruitment-web/admin/css/index.css
+++ b/recruitment-web/admin/css/index.css
@@ -53,3 +53,11 @@
     line-height: 27px;
     height: 27px !important;
 }
+.screen{
+    float: left;
+    margin-left: 30px;
+}
+.super{
+    line-height: 27px;
+    height: 27px !important;
+}
