--- a/recruitment-web/apply/css/detail.css
+++ b/recruitment-web/apply/css/detail.css
@@ -192,7 +192,6 @@ a {
     float: left;
     margin-left: 20px;
     width: 150px;
-    margin-top: 6px;
     /* height: 70px; */
     overflow: hidden;
     white-space: nowrap;
@@ -204,7 +203,6 @@ a {
     float: left;
     margin-left: 20px;
     position: relative;
-    margin-top: 10px;
     font-size: 20px;
     width: auto;
     color: orangered;
@@ -212,14 +210,16 @@ a {
 }
 
 .postTypeS {
-    float: right;
+    float: left;
     /* position:relative; */
-    /* margin-right: 10px; */
-    margin-top: 13px;
+    /* margin-right: 10px;
+    margin-top: 13px; */
     font-size: 8px;
-    margin-right: 20px;
+    /* margin-right: 20px; */
     color: gray;
     /* border: #000 1px solid; */
+    width: 80px;
+    margin-left: 20px;
 }
 .title{
     float: left;
@@ -301,4 +301,8 @@ a {
     margin-right: 15px;
     font-size: 15px;
     color: #fff;
+}
+.myDelivery{
+    width: 90%;
+    margin: 50px auto;
 }
